Fixed about me container formatting

--- a/index.html
+++ b/index.html
@@ -32,32 +32,45 @@
     </div>
   </nav>
 
-  <div class="container-fluid px-lg-5">
-    <div class="row row-cols-2 mx-lg-n5">
-      <div class="col px-lg-5">
-        <img src="./assets/deez.JPG" 
-      </div>
-        <div class="col px-lg-5" style="color:white" ;>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis architecto repellendus nulla autem quod?
-            Repudiandae amet architecto exercitationem quam, earum consequuntur? Aut ratione a aliquam ipsa illum nihil
-            assumenda recusandae.</p>
+  <div class="container" style="padding:20px; margin:50px; background-color:darkgray;">
+    <div class="row">
+      <div class="col">
+        <h1>About Me</h1>
+        <div class="row">
+          <div class="col" style="float:left">
+            <img src="./assets/deez.JPG" alt="Dustin LaMarr"
+              title="Did you eat a lot of paint chips when you were a kid?">
+          </div>
+          <div class="col px-lg-5" style="color:white;">
+            <p>What my associate is trying to say is that, uh, our new brake pads are really cool. You're not even going
+              to believe it. Like, um, let's say you're driving along the road with your family. And you're driving
+              along la li la. And then, all of the sudden there's a truck tire in the middle of the road. And you hit
+              the brakes. Err! Whoa, that was close. Now let's see what happens when you're driving with the 'other
+              guy's' brake pads. You're driving along. You're driving along and all of the sudden the kids are yelling
+              from the backseat, 'I got to go to the bathroom, daddy!', 'Not now, damn it!', truck tire, eeeee, 'I can't
+              stop!'. Help! There's a cliff! Aah! And your family's screaming 'Oh my god, we're burning alive!' 'No! I
+              can't feel my legs!'. In comes the meat wagon. And the medic gets out and says, 'Oh, my god.'. New guy's
+              in the corner puking his guts out. All because... you want to save a couple of extra pennies. To me, it
+              doesn't...</p>
+          </div>
         </div>
-
+      </div>
     </div>
   </div>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"></script>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
