--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 
     <div class="container" style="padding:20px; margin:50px; background-color:darkgray;">
         <div class="row">
-            <h1>Contact Me</h1>
+            <h1 style="padding-left:20px; padding-bottom:20px;">Contact Me</h1>
         </div>
         <form>
             <div class="form-row">
