--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
       <div class="col">
         <h1>About Me</h1>
         <div class="row">
-          <div class="col" style="float:left;">
+          <div class="col-xl-3" style="float:left;">
             <img src="./assets/deez.JPG" alt="Dustin LaMarr"
               title="Did you eat a lot of paint chips when you were a kid?">
           </div>
-          <div class="col px-lg-5" style="color:black;">
+          <div class="col-xl-9 " style="color:black;">
             <p>What my associate is trying to say is that, uh, our new brake pads are really cool. You're not even going
               to believe it. Like, um, let's say you're driving along the road with your family. And you're driving
               along la li la. And then, all of the sudden there's a truck tire in the middle of the road. And you hit
@@ -54,13 +54,18 @@
               doesn't...</p>
           </div>
         </div>
-        <div class="row" style="padding:20px;">
-          <div class="col">
-            <h2>Social Media</h2> 
-            <a class="btn btn-primary" style="padding:10px;" href="https://www.linkedin.com/in/dustinlamarr/"
-              role="button">LinkedIn</a>
-              <a class="btn btn-secondary" style="padding:10px;" href="https://www.linkedin.com/in/dustinlamarr/"
-              role="button">Instagram</a>
+        <div class="container">
+          <div class="row" style="padding-top:20px;">
+
+            <h2>Social Media</h2>
+          </div>
+          <div class="row">
+            <div class="col-sm-auto">
+              <img src="./assets/linkedin.png" href="https://www.linkedin.com/in/dustinlamarr/">
+            </div>
+            <div class="col-sm-auto">
+              <img src="./assets/ig.png" href="https://www.linkedin.com/in/dustinlamarr/">
+            </div>
           </div>
         </div>
       </div>
