fixed padding on social icons. centered about me paragraph

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <div class="row">
       <div class="col">
         <h1>About Me</h1>
-        <div class="row">
+        <div class="row align-items-center">
           <div class="col-xl-3" style="float:left;">
             <img src="./assets/deez.JPG" alt="Dustin LaMarr"
               title="Did you eat a lot of paint chips when you were a kid?">
           </div>
-          <div class="col-xl-9 " style="color:black;">
+          <div class="col-xl-9" style="color:black;">
             <p>What my associate is trying to say is that, uh, our new brake pads are really cool. You're not even going
               to believe it. Like, um, let's say you're driving along the road with your family. And you're driving
               along la li la. And then, all of the sudden there's a truck tire in the middle of the road. And you hit
@@ -55,16 +55,20 @@
           </div>
         </div>
         <div class="container">
-          <div class="row" style="padding-top:20px;">
+          <div class="row no-gutters" style="padding-top:20px;">
 
             <h2>Social Media</h2>
           </div>
-          <div class="row">
-            <div class="col-sm-auto">
-              <img src="./assets/linkedin.png" href="https://www.linkedin.com/in/dustinlamarr/">
+          <div class="row no-gutters">
+            <div class="col-sm-auto" style="padding-right:5px;">
+              <a href="https://www.linkedin.com/in/dustinlamarr/">
+              <img src="./assets/linkedin.png" alt="linked in">
+              </a>
             </div>
-            <div class="col-sm-auto">
-              <img src="./assets/ig.png" href="https://www.linkedin.com/in/dustinlamarr/">
+            <div class="col-sm-auto" style="padding-left:5px;">
+              <a href="https://www.instagram.com/prodigal_punk/"> 
+                <img src="./assets/ig.png">
+              </a>
             </div>
           </div>
         </div>
