--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,15 @@
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">Message</span>
+                </div>
+                <textarea class="form-control" aria-label="With textarea"></textarea>
+            </div>
+            <div class="form-row" style="padding-top:20px;">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
         </form>
     </div>
     </div>
