--- a/index.html
+++ b/index.html
@@ -62,20 +62,18 @@
           <div class="row no-gutters">
             <div class="col-sm-auto" style="padding-right:5px;">
               <a href="https://www.linkedin.com/in/dustinlamarr/">
-              <img src="./assets/linkedin.png" alt="linked in">
+              <img src="./assets/linkedin.png" alt="Linked In">
               </a>
             </div>
             <div class="col-sm-auto" style="padding-left:5px;">
               <a href="https://www.instagram.com/prodigal_punk/"> 
-                <img src="./assets/ig.png">
+                <img src="./assets/ig.png" alt="Instagram">
               </a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-
   </div>
 
 
