--- a/portfolio.html
+++ b/portfolio.html
@@ -38,27 +38,23 @@
         <h1>Portfolio</h1>
         <div class="row align-items-center">
           <div class="col-xl-6">
-            <img src="https://via.placeholder.com/800x600">
+            <img src="https://via.placeholder.com/800x600" alt="placeholder1">
           </div>
           <div class="col-xl-6">
-            <img src="https://via.placeholder.com/800x600">
+            <img src="https://via.placeholder.com/800x600" alt="placeholder2">
           </div>
         </div>
         <div class="row align-items-center" style="padding-top:20px;">
           <div class="col-xl-6">
-            <img src="https://via.placeholder.com/800x600">
+            <img src="https://via.placeholder.com/800x600" alt="placeholder3">
           </div>
           <div class="col-xl-6">
-            <img src="https://via.placeholder.com/800x600">
+            <img src="https://via.placeholder.com/800x600" alt="placeholder4">
           </div>
         </div>
       </div>
     </div>
   </div>
-
-  </div>
-
-
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
