--- a/index.html
+++ b/index.html
@@ -42,16 +42,10 @@
               title="Did you eat a lot of paint chips when you were a kid?">
           </div>
           <div class="col-xl-9" style="color:black;">
-            <p>What my associate is trying to say is that, uh, our new brake pads are really cool. You're not even going
-              to believe it. Like, um, let's say you're driving along the road with your family. And you're driving
-              along la li la. And then, all of the sudden there's a truck tire in the middle of the road. And you hit
-              the brakes. Err! Whoa, that was close. Now let's see what happens when you're driving with the 'other
-              guy's' brake pads. You're driving along. You're driving along and all of the sudden the kids are yelling
-              from the backseat, 'I got to go to the bathroom, daddy!', 'Not now, damn it!', truck tire, eeeee, 'I can't
-              stop!'. Help! There's a cliff! Aah! And your family's screaming 'Oh my god, we're burning alive!' 'No! I
-              can't feel my legs!'. In comes the meat wagon. And the medic gets out and says, 'Oh, my god.'. New guy's
-              in the corner puking his guts out. All because... you want to save a couple of extra pennies. To me, it
-              doesn't...</p>
+            <p>This is my bio. I will update it later when I figure out what I want/what needs to go in this space. I
+              don't want to just use it to tell my whole life's story. That'd be boring. Maybe just the key points?
+              Building my "personal brand" does not sound like a fun thing to do, and I kind of roll my eyes whenever I
+              hear the term.</p>
           </div>
         </div>
         <div class="container">
@@ -62,11 +56,11 @@
           <div class="row no-gutters">
             <div class="col-sm-auto" style="padding-right:5px;">
               <a href="https://www.linkedin.com/in/dustinlamarr/">
-              <img src="./assets/linkedin.png" alt="Linked In">
+                <img src="./assets/linkedin.png" alt="Linked In">
               </a>
             </div>
             <div class="col-sm-auto" style="padding-left:5px;">
-              <a href="https://www.instagram.com/prodigal_punk/"> 
+              <a href="https://www.instagram.com/prodigal_punk/">
                 <img src="./assets/ig.png" alt="Instagram">
               </a>
             </div>
