--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1>About Me</h1>
         <div class="row align-items-center">
           <div class="col-xl-3" style="float:left;">
-            <img src="./Assets/deez.JPG" alt="Dustin LaMarr"
+            <img src="/assets/deez.JPG" alt="Dustin LaMarr"
               title="Did you eat a lot of paint chips when you were a kid?">
           </div>
           <div class="col-xl-9" style="color:black;">
@@ -57,12 +57,12 @@
           <div class="row no-gutters">
             <div class="col-sm-auto" style="padding-right:5px;">
               <a href="https://www.linkedin.com/in/dustinlamarr/">
-                <img src="./assets/linkedin.png" alt="Linked In">
+                <img src="/assets/linkedin.png" alt="Linked In">
               </a>
             </div>
             <div class="col-sm-auto" style="padding-left:5px;">
               <a href="https://www.instagram.com/prodigal_punk/">
-                <img src="./assets/ig.png" alt="Instagram">
+                <img src="/assets/ig.png" alt="Instagram">
               </a>
             </div>
           </div>
