images effed up

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h1>About Me</h1>
         <div class="row align-items-center">
           <div class="col-xl-3" style="float:left;">
-            <img src="assets/deez.JPG" alt="Dustin LaMarr"
+            <img src="./Assets/deez.JPG" alt="Dustin LaMarr"
               title="Did you eat a lot of paint chips when you were a kid?">
           </div>
           <div class="col-xl-9" style="color:black;">
