Update directory name

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
           <div class="col-xl-9" style="color:black;">
             <p>This is my bio. I will update it later when I figure out what I want/what needs to go in this space. I
               don't want to just use it to tell my whole life's story. That'd be boring. Maybe just the key points?
-              Testing.
               Building my "personal brand" does not sound like a fun thing to do, and I kind of roll my eyes whenever I
               hear the term.</p>
           </div>
@@ -57,12 +56,12 @@
           <div class="row no-gutters">
             <div class="col-sm-auto" style="padding-right:5px;">
               <a href="https://www.linkedin.com/in/dustinlamarr/">
-                <img src="./assets/linkedin.png" alt="Linked In">
-              </a>
-            </div>
-            <div class="col-sm-auto" style="padding-left:5px;">
-              <a href="https://www.instagram.com/prodigal_punk/">
-                <img src="./assets/ig.png" alt="Instagram">
+                <img src="./Assets/linkedin.png" alt="Linked In">
+              </a
+            </div
+            <div class="col-m-auto" style="padding-left:5px;">
+              <a href="https//www.instagram.com/prodigal_punk/">
+                <img src="./Assets/ig.png" alt="Instagram">
               </a>
             </div>
           </div>
