Added Bulma npm

--- a/index.html
+++ b/index.html
@@ -16,64 +16,19 @@
 </head>
 
 <body class="body">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#" style="color:goldenrod;">Dustin LaMarr</a>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
-      <div class="navbar-nav float-right">
-        <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="./portfolio.html">Portfolio</a>
-        <a class="nav-link" href="./contact.html">Contact</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      </div>
+  <section class="section">
+    <div class="container">
+      <h1 class="title">
+        Hello World
+      </h1>
+      <p class="subtitle">
+        My first website with <strong>Bulma</strong>!
+      </p>
     </div>
-  </nav>
-
-  <div class="container" style="padding:20px; margin:50px; background-color:darkgray;">
-    <div class="row">
-      <div class="col">
-        <h1>About Me</h1>
-        <div class="row align-items-center">
-          <div class="col-xl-3" style="float:left;">
-            <img src="./Assets/deez.JPG" alt="Dustin LaMarr"
-              title="Did you eat a lot of paint chips when you were a kid?">
-          </div>
-          <div class="col-xl-9" style="color:black;">
-            <p>This is my bio. I will update it later when I figure out what I want/what needs to go in this space. I
-              don't want to just use it to tell my whole life's story. That'd be boring. Maybe just the key points?
-              Building my "personal brand" does not sound like a fun thing to do, and I kind of roll my eyes whenever I
-              hear the term.</p>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row no-gutters" style="padding-top:20px;">
-
-            <h2>Social Media</h2>
-          </div>
-          <div class="row no-gutters">
-            <div class="col-sm-auto" style="padding-right:5px;">
-              <a href="https://www.linkedin.com/in/dustinlamarr/">
-                <img src="./Assets/linkedin.png" alt="Linked In">
-              </a
-            </div
-            <div class="col-m-auto" style="padding-left:5px;">
-              <a href="https//www.instagram.com/prodigal_punk/">
-                <img src="./Assets/ig.png" alt="Instagram">
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  </section>
 
 
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
