Added tiles for all projects. Brought in code for effing modal

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica+SC&display=swap" rel="stylesheet">
 
@@ -16,19 +16,116 @@
 </head>
 
 <body class="body">
-
+  
   <section class="section">
     <div class="container">
-      <h1 class="title">
-        Hello World
-      </h1>
-      <p class="subtitle">
-        My first website with <strong>Bulma</strong>!
-      </p>
+      <nav class="level">
+        <p class="level-item has-text-centered">
+          <img src="./Assets/deez.png" alt="" style="height: 80px;">
+        </p>
+        <p class="level-item has-text-centered">
+          <a class="link is-info">Resume</a>
+        </p>
+        <p class="level-item has-text-centered">
+          <a class="link is-info">GitHub</a>
+        </p>
+        <p class="level-item has-text-centered">
+          <a class="link is-info">LinkedIn</a>
+        </p>
+        <p class="level-item has-text-centered">
+          <a class="link is-info">Contact</a>
+        </p>
+      </nav>
+      <div class="tile is-ancestor">
+        <div class="tile is-vertical">
+          
+          <div class="tile is-parent has-background-success-dark">
+            <article class="tile is-child notification is-vcentered has-background-success-dark">
+              <div class="columns box mr-2">
+              <div class="column box is-vcentered mt-5">
+              <p class="title has-text-success-dark">Pas$g3|\|</p>
+              <div class="block has-text-success-dark">
+                PassGen takes user inputs that specify password criteria such as characters to include and length, and generates a random password. It's basically the same thing as that "suggested password" feature on Chrome, but with more options, and I built it for my first Javascript assignment. I think that really says something about my coding level. 
+              </div>
+            </div>
+              <div class="column is-vcentered mt-6">
+                <img src="./Assets/password-gen.png">
+              </div>
+            </div>
+            </article>
+
+            <article class="tile is-child notification is-vcentered has-background-success-dark">
+              <div class="columns box mr-2">
+              <div class="column box is-vcentered mt-5">
+              <p class="title has-text-success-dark">Code Quiz</p>
+              <div class="block has-text-success-dark">
+                Code Quiz is an interactive quiz game to test front-end developer knowledge. Use Code Quiz as a pre-interview test to save valuable hiring resources, because you are going to want to weed out these "boot-campers", am I right?
+              </div>
+            </div>
+              <div class="column is-vcentered mt-6">
+                <img src="./Assets/code-quiz.png">
+              </div>
+            </div>
+            </article>
+
+          </div>
+
+          <div class="tile is-parent has-background-success-dark">
+            <article class="tile is-child notification is-vcentered has-background-success-dark">
+              <div class="columns box is-vcentered mr-2">
+              <div class="column box is-vcentered mt-5">
+              <p class="title has-text-success-dark">Day Planner: Plan Your Day</p>
+              <div class="block has-text-success-dark">
+                Enter your events at the start of every day, and Day Planner: Plan Your Day will show you that you forgot to do the thing you planned because it's background will be red, informing you of your failure at your job, but also reminding you at your general ineptitude at life. Day Planner: Plan YOUR Day.
+              </div>
+            </div>
+              <div class="column is-vcentered mt-6">
+                <img src="./Assets/day-planner.png">
+              </div>
+            </div>
+            </article>
+
+            <article class="tile is-child notification is-vcentered has-background-success-dark">
+              <div class="columns box mr-2">
+              <div class="column box is-vcentered mt-5">
+              <p class="title has-text-success-dark">Weather Dad</p>
+              <div class="block has-text-success-dark">
+                Have you recently become an "old" like me? If so, then you know about the irresistable urge to know the weather conditions at all times. Well pals, I'd like to introduce you to Weather Dad. This baby is really somethin, I'll tell ya what. Enter your city and find out the current conditions. Oh you want features, chief? How about we also throw in the five day forecast? Welcome your favorite new tool.
+              </div>
+            </div>
+              <div class="column is-vcentered mt-6">
+                <img src="./Assets/weather-dad.png">
+              </div>
+            </div>
+            </article>
+
+          </div>
+
+
+        </div>
+        
+      </div>
     </div>
   </section>
 
+  <div class="modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">Modal title</p>
+        <button class="delete" aria-label="close"></button>
+      </header>
+      <section class="modal-card-body">
+        <!-- Content ... -->
+      </section>
+      <footer class="modal-card-foot">
+        <button class="button is-success">Save changes</button>
+        <button class="button">Cancel</button>
+      </footer>
+    </div>
+  </div>
 
+  <script src="./script"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
