Finished modals for all projects. Adding links

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           <a class="link is-info">Resume</a>
         </p>
         <p class="level-item has-text-centered">
-          <a class="link is-info">GitHub</a>
+          <a class="link is-info" href="https://github.com/dustin-lamarr">GitHub</a>
         </p>
         <p class="level-item has-text-centered">
-          <a class="link is-info">LinkedIn</a>
+          <a class="link is-info" href="https://www.linkedin.com/in/dustinlamarr/">LinkedIn</a>
         </p>
         <p class="level-item has-text-centered">
           <a class="link is-info">Contact</a>
@@ -41,14 +41,16 @@
 
           <div class="tile is-parent has-background-success-dark">
             <article class="tile is-child notification is-vcentered has-background-success-dark">
-              <div class="columns box mr-2">
-                <div class="column box is-vcentered mt-5">
-                  <p class="title has-text-success-dark has-text-centered pt-6">P4s$g3N</p>
-                </div>
-                <div class="column is-vcentered mt-6">
-                  <img src="./Assets/password-gen.png">
-                  <div class="buttons is-centered">
-                    <button class="button is-success is-light is-centered" id="passgen-info">Get Info</button>
+              <div class="columns box is-centered">
+                <div class="box">
+                  <div class="column is-vcentered">
+                    <p class="title has-text-success-dark has-text-centered">P4s$g3N</p>
+                  </div>
+                  <div class="column is-vcentered">
+                    <img src="./Assets/password-gen.png">
+                    <div class="buttons is-centered">
+                      <button class="button is-success is-light is-centered" id="passgen-info">Get Info</button>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -56,31 +58,48 @@
 
             <div class="tile is-parent has-background-success-dark">
               <article class="tile is-child notification is-vcentered has-background-success-dark">
-                <div class="columns box mr-2">
-                  <div class="column box is-vcentered mt-5">
-                    <p class="title has-text-success-dark has-text-centered pt-6">Code Quiz</p>
-                  </div>
-                  <div class="column is-vcentered mt-6">
-                    <img src="./Assets/code-quiz.png"">
-                    <div class="buttons is-centered">
-                      <button class="button is-success is-light is-centered" id="passgen-info">Get Info</button>
+                <div class="columns box is-centered">
+                  <div class="box">
+                    <div class="column is-vcentered">
+                      <p class="title has-text-success-dark has-text-centered">Code Quiz</p>
+                    </div>
+                    <div class="column is-vcentered">
+                      <img src="./Assets/code-quiz.png">
+                      <div class="buttons is-centered">
+                        <button class="button is-success is-light is-centered" id="codequiz-info">Get Info</button>
+                      </div>
                     </div>
                   </div>
                 </div>
               </article>
+            </div>
+          </div>
+
+          <div class="tile is-parent has-background-success-dark">
+            <article class="tile is-child notification is-vcentered has-background-success-dark">
+              <div class="columns box mr-2">
+                <div class="column box is-vcentered mt-5">
+                  <p class="title has-text-success-dark has-text-centered pt-6">Day Planner: Plan Your Day</p>
+                </div>
+                <div class="column is-vcentered mt-6">
+                  <img src="./Assets/day-planner.png">
+                  <div class="buttons is-centered">
+                    <button class="button is-success is-light is-centered" id="dayplanner-info">Get Info</button>
+                  </div>
+                </div>
+              </div>
+            </article>
 
             <article class="tile is-child notification is-vcentered has-background-success-dark">
               <div class="columns box mr-2">
                 <div class="column box is-vcentered mt-5">
-                  <p class="title has-text-success-dark">Code Quiz</p>
-                  <div class="block has-text-success-dark">
-                    Code Quiz is an interactive quiz game to test front-end developer knowledge. Use Code Quiz as a
-                    pre-interview test to save valuable hiring resources, because you are going to want to weed out
-                    these "boot-campers", am I right?
-                  </div>
+                  <p class="title has-text-success-dark has-text-centered pt-6">Weather Dad</p>
                 </div>
                 <div class="column is-vcentered mt-6">
-                  <img src="./Assets/code-quiz.png">
+                  <img src="./Assets/weather-dad.png">
+                  <div class="buttons is-centered">
+                    <button class="button is-success is-light is-centered" id="weatherdad-info">Get Info</button>
+                  </div>
                 </div>
               </div>
             </article>
@@ -88,36 +107,15 @@
 
           <div class="tile is-parent has-background-success-dark">
             <article class="tile is-child notification is-vcentered has-background-success-dark">
-              <div class="columns box is-vcentered mr-2">
-                <div class="column box is-vcentered mt-5">
-                  <p class="title has-text-success-dark">Day Planner: Plan Your Day</p>
-                  <div class="block has-text-success-dark">
-                    Enter your events at the start of every day, and Day Planner: Plan Your Day will show you that you
-                    forgot to do the thing you planned because it's background will be red, informing you of your
-                    failure at your job, but also reminding you at your general ineptitude at life. Day Planner: Plan
-                    YOUR Day.
-                  </div>
-                </div>
-                <div class="column is-vcentered mt-6">
-                  <img src="./Assets/day-planner.png">
-                </div>
-              </div>
-            </article>
-
-            <article class="tile is-child notification is-vcentered has-background-success-dark">
               <div class="columns box mr-2">
                 <div class="column box is-vcentered mt-5">
-                  <p class="title has-text-success-dark">Weather Dad</p>
-                  <div class="block has-text-success-dark">
-                    Have you recently become an "old" like me? If so, then you know about the irresistable urge to know
-                    the weather conditions at all times. Well pals, I'd like to introduce you to Weather Dad. This baby
-                    is really somethin, I'll tell ya what. Enter your city and find out the current conditions. Oh you
-                    want features, chief? How about we also throw in the five day forecast? Welcome your favorite new
-                    tool.
-                  </div>
+                  <p class="title has-text-success-dark has-text-centered pt-6 is-vcentered">Binger</p>
                 </div>
                 <div class="column is-vcentered mt-6">
-                  <img src="./Assets/weather-dad.png">
+                  <img src="./Assets/binger.png">
+                  <div class="buttons is-centered">
+                    <button class="button is-success is-light is-centered" id="binger-info">Get Info</button>
+                  </div>
                 </div>
               </div>
             </article>
@@ -130,19 +128,31 @@
   <div class="modal" id="modal">
     <div class="modal-background">
       <div class="modal-content">
-        <div class="modal-card">
-          <header class="modal-card-head has-text-centered">
-            <p class="modal-card-title" id="modal-title"></p>
-            <button class="delete" aria-label="close"></button>
+        <div class="modal-card box">
+          <header class="level">
+            <p class="modal-card-title level-item" id="modal-title"></p>
+            <div class="level-right">
+            <button class="delete level-item" aria-label="close"></button>
+          </div>
           </header>
           <section class="modal-card-body">
-            <div class="columns" id="modal-body">
-              <div class="column block has-text-success-dark" id="project-info"></div>
-              <div class="column is-two-thirds" id="project-gif"></div>
+            <div class="columns">
+              <div class="column is-full block has-text-success-dark" id="project-info"></div>
+            </div>
+              <div class="columns">
+              <div class="column is-full" id="project-gif"></div>
+            </div>
+            <div class="columns">
+              <div class="column is-centered box"><a id="live-site"></a></div>
+            </div>
+            <div class="columns">
+              <div class="column is-full"><a id="repo-link"></a></div>
             </div>
           </section>
-          <footer class="modal-card-foot">
-            <button class="button" id="cancel-button">Close</button>
+          <footer class="level">
+            <div class="level-right">
+            <button class="button level-item" id="cancel-button">Close</button>
+          </div>
           </footer>
         </div>
       </div>
